syntax = "proto3";
package helloworld;
// 指定包名
option go_package = ".;proto";

// proto 的代码
message HelloRequest {
  string name = 1; // 1 是编号不是值
  int32 age =2;
  repeated string courses=3;  // repeated 切片
}

message HelloReply{
  string message = 1;
}

// grpc 的代码 ( protoc --go_out=. --go-grpc_out=.  helloworld.proto)
service Greeter{
  rpc SayHello(HelloRequest) returns (HelloReply); // 接口
}
